--- a/Work.html
+++ b/Work.html
@@ -37,22 +37,22 @@
             <div class="portfolios">
                 <div class="portfolio">
                     <div class="p-icon">
-                        <img src="image/prog.jpg" width="70%" height="70%">
+                        <img src="https://github.com/shooo-oo/shooo-oo.github.io/blob/master/prog.jpg?raw=true" width="70%" height="70%">
                         <p>プログラミング</p>
                 </div>
                 <div class="portfolio">
                     <div class="p-icon">
-                        <img src="image/hotel.jpg" width="70%" height="70%">
+                        <img src="https://github.com/shooo-oo/shooo-oo.github.io/blob/master/hotel.jpg?raw=true" width="70%" height="70%">
                         <p>HOTEL</p>
                 </div>
                 <div class="portfolio">
                     <div class="p-icon">
-                        <img src="image/eng.jpg" width="70%" height="70%">
+                        <img src="https://github.com/shooo-oo/shooo-oo.github.io/blob/master/eng.jpg?raw=true" width="70%" height="70%">
                         <p>English</p>
                 </div>
                 <div class="portfolio">
                     <div class="p-icon">
-                        <img src="image/T-shirt.jpg" width="70%" height="70%">
+                        <img src="https://github.com/shooo-oo/shooo-oo.github.io/blob/master/T-shirt.jpg?raw=true" width="70%" height="70%">
                         <p>T-shirt</p>
                 </div>
             </div>
